force-app/main/default/objects/Contract__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Airfares</fullName>
            </value>
            <value>
                <fullName>Qantas Business Savings</fullName>
                <default>true</default>
                <label>Qantas Business Savings</label>
            </value>
            <value>
                <fullName>Adhoc</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>FIFO Scheduled</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>