force-app/main/default/objects/Contract__c/fields/Unit_Spend_per_term__c.field-meta.xml
<CustomField>
    <fullName>Unit_Spend_per_term__c</fullName>
    <formula>Qantas_Annual_Expenditure__c  /  Contract_Term_in_Months__c</formula>
    <label>Unit Spend per term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>