force-app/main/default/objects/Contract__c/fields/User_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_Phone__c</fullName>
    <formula>CreatedBy.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Phone</label>
    <type>Text</type>
</CustomField>