force-app/main/default/objects/Contract__c/fields/Value_Add_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Value_Add_Reasons__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value Add Reasons</label>
    <type>TextArea</type>
</CustomField>