force-app/main/default/objects/Contract__c/fields/Variation_In_Place__c.field-meta.xml
<CustomField>
    <fullName>Variation_In_Place__c</fullName>
    <description>Checks if there is a variation in place with the contract</description>
    <formula>IF( Count_Of_Variation__c &gt; 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If this is checked there is an active variation</inlineHelpText>
    <label>Variation In Place</label>
    <type>Checkbox</type>
</CustomField>