force-app/main/default/objects/Contract__c/fields/Volume_Deal__c.field-meta.xml
<CustomField>
    <fullName>Volume_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used under the &quot;Special Conditions&quot; section</description>
    <inlineHelpText>If no share requirement</inlineHelpText>
    <label>Revenue Target Only</label>
    <type>Checkbox</type>
</CustomField>