force-app/main/default/objects/Contract__c/recordTypes/Adhoc_Charter.recordType-meta.xml
<RecordType>
    <fullName>Adhoc_Charter</fullName>
    <active>true</active>
    <label>Adhoc Charter</label>
</RecordType>