force-app/main/default/objects/Contract__c/recordTypes/Agency_Approval_Pending.recordType-meta.xml
<RecordType>
    <fullName>Agency_Approval_Pending</fullName>
    <active>true</active>
    <label>Agency - Approval Pending</label>
</RecordType>