force-app/main/default/objects/Contract__c/recordTypes/Agency_Signed_by_Customer.recordType-meta.xml
<RecordType>
    <fullName>Agency_Signed_by_Customer</fullName>
    <active>true</active>
    <label>Agency - Signed by Customer</label>
</RecordType>