force-app/main/default/objects/Contract__c/recordTypes/CA_Contract_Variation.recordType-meta.xml
<RecordType>
    <fullName>CA_Contract_Variation</fullName>
    <active>true</active>
    <description>Record type for contract variation</description>
    <label>CA - Contract Variation</label>
</RecordType>