force-app/main/default/objects/Contract__c/recordTypes/CA_Signed_by_Customer.recordType-meta.xml
<RecordType>
    <fullName>CA_Signed_by_Customer</fullName>
    <active>true</active>
    <description>To be used for Corporate Airfares contracts that have been accepted/signed by the customer</description>
    <label>CA - Signed by Customer</label>
</RecordType>