force-app/main/default/objects/Contract__c/recordTypes/Charters_Contract_Legal_Customer_Pending.recordType-meta.xml
<RecordType>
    <fullName>Charters_Contract_Legal_Customer_Pending</fullName>
    <active>true</active>
    <description>Record type for Charters information.</description>
    <label>Charters Contract - Legal/Customer Pending</label>
</RecordType>