force-app/main/default/objects/Contract__c/recordTypes/Charters_Contract_Signed_by_Customer.recordType-meta.xml
<RecordType>
    <fullName>Charters_Contract_Signed_by_Customer</fullName>
    <active>true</active>
    <label>Charters Contract - Signed by Customer</label>
</RecordType>