force-app/main/default/objects/Contract__c/recordTypes/Corporate_Airfares.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Airfares</fullName>
    <active>true</active>
    <description>To be used for Corporate Airfares contracts that having status as Signature required by Customer. No Legal approval required for Contract as per new process.</description>
    <label>CA - Legal/Customer Pending</label>
</RecordType>