force-app/main/default/objects/Contract__c/recordTypes/Loyalty_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Loyalty_Commercial</fullName>
    <active>true</active>
    <description>This is used for Loyalty Commercial purpose</description>
    <label>Loyalty Commercial</label>
</RecordType>