force-app/main/default/objects/Contract__c/recordTypes/Qantas_Business_Savings.recordType-meta.xml
<RecordType>
    <fullName>Qantas_Business_Savings</fullName>
    <active>true</active>
    <description>To be used for QBS Airfares contracts that having status as Signature required by Customer. No Legal approval required for Contract as per new process.</description>
    <label>QBS - Legal/Customer Pending</label>
</RecordType>