force-app/main/default/objects/Contract__c/recordTypes/QBS_Contract_Variation.recordType-meta.xml
<RecordType>
    <fullName>QBS_Contract_Variation</fullName>
    <active>true</active>
    <description>Record type for contract variation - QBS</description>
    <label>QBS - Contract Variation</label>
</RecordType>