force-app/main/default/objects/Contract__c/recordTypes/QBS_Signed_by_Customer.recordType-meta.xml
<RecordType>
    <fullName>QBS_Signed_by_Customer</fullName>
    <active>true</active>
    <description>To be used for QBS contracts that have been accepted/signed by the customer</description>
    <label>QBS - Signed by Customer</label>
</RecordType>