force-app/main/default/objects/Contract__c/validationRules/Description_Is_NotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Is_NotBlank</fullName>
    <active>false</active>
    <description>This is for Corporate Airfares and QBS contracts where Description field can&apos;t be blank before generating Deal Sheet</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c  , &apos;Signed by Customer&apos;), ISBLANK( Description__c))</errorConditionFormula>
    <errorMessage>Description Status can&apos;t be Blank when the Contract Status is &apos;Signed by Customer&apos;</errorMessage>
</ValidationRule>