force-app/main/default/objects/Contract__c/validationRules/GEN_DOM_INT_Is_NotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>GEN_DOM_INT_Is_NotBlank</fullName>
    <active>false</active>
    <description>This is for Corporate Airfares and QBS contracts where General, Domestic Amendment and  International Amendment fields can&apos;t be blank before generating Deal Sheet.</description>
    <errorConditionFormula>AND(OR($RecordType.Name = &apos;CA - Signed by Customer&apos;,$RecordType.Name = &apos;QBS - Signed by Customer&apos;,$RecordType.Name = &apos;CA - Legal/Customer Pending&apos;,$RecordType.Name = &apos;QBS - Legal/Customer Pending&apos;), ISPICKVAL(Status__c  , &apos;Signed by Customer&apos;), NOT(ISPICKVAL( PRIORVALUE(Status__c) , &apos;Signed by Customer&apos;)),OR(ISBLANK(General__c), ISBLANK(Domestic_Amendment__c), ISBLANK(International_Amendment__c)))</errorConditionFormula>
    <errorMessage>General, Domestic Amendments and International Amendments fields can&apos;t be Blank when the Contract Status is &apos;Signed by Customer&apos;</errorMessage>
</ValidationRule>