force-app/main/default/objects/Contract__c/validationRules/Linked_Agreement_Details_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Linked_Agreement_Details_Mandatory</fullName>
    <active>true</active>
    <description>Make the Linked Agreement Details field when Linked Agreement is selected as &apos;Yes&apos;</description>
    <errorConditionFormula>IF( ISPICKVAL( Linked_Agreement__c , &apos;Yes&apos;) &amp;&amp;  ISBLANK( Linked_Agreement_Details__c )  , true, false)</errorConditionFormula>
    <errorDisplayField>Linked_Agreement_Details__c</errorDisplayField>
    <errorMessage>Please provide the Linked Agreement Details</errorMessage>
</ValidationRule>