force-app/main/default/objects/Contract__c/validationRules/Loyalty_End_Date_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Loyalty_End_Date_Lock</fullName>
    <active>true</active>
    <description>Lock end date for a loyalty user if there is an extension variation in place</description>
    <errorConditionFormula>AND(
$RecordType.DeveloperName = &quot;Loyalty_Commercial&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,  
$Profile.Name &lt;&gt; &quot;Qantas System Administrator&quot;,  
$Profile.Name &lt;&gt; &quot;Qantas System Admin - Freight&quot;,  
$Profile.Name &lt;&gt; &quot;Qantas System Admin - QCC&quot;,  
$Profile.Name &lt;&gt; &quot;Qantas System Admin - SND&quot;,  
Count_of_Extension_Variation_Type__c &gt; 0,  ISCHANGED( Contract_End_Date__c ), Lock_system__c =false )</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>Extension is in place, please do not edit the end date</errorMessage>
</ValidationRule>