force-app/main/default/objects/Contract__c/validationRules/Mandate_Performance_Bonus_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Performance_Bonus_Criteria</fullName>
    <active>true</active>
    <description>Performance Bonus Criteria is mandatory when performance bonus is ticked</description>
    <errorConditionFormula>AND(Performance_Bonus__c = TRUE, ISBLANK(Performance_Bonus_Criteria__c))</errorConditionFormula>
    <errorDisplayField>Performance_Bonus_Criteria__c</errorDisplayField>
    <errorMessage>Please enter Performance Bonus Criteria</errorMessage>
</ValidationRule>