force-app/main/default/objects/Contract__c/validationRules/Mandatory_Additional_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Additional_Changes</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Standard__c, &apos;Yes&apos;), ISBLANK( Additional_Change_Details__c) )</errorConditionFormula>
    <errorDisplayField>Additional_Change_Details__c</errorDisplayField>
    <errorMessage>Please specify additional changes.</errorMessage>
</ValidationRule>