force-app/main/default/objects/Contract__c/validationRules/Restrict_Entering_Additional_Changes.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Entering_Additional_Changes</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Standard__c , &apos;No&apos;), NOT( ISBLANK( Additional_Change_Details__c)) )</errorConditionFormula>
    <errorDisplayField>Additional_Change_Details__c</errorDisplayField>
    <errorMessage>You can&apos;t enter value if Require Additional Changes is &quot;No&quot;</errorMessage>
</ValidationRule>