force-app/main/default/objects/Contract__c/validationRules/Restrict_legal_Approve_reject_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_legal_Approve_reject_date</fullName>
    <active>true</active>
    <description>Restrict Legal Approve value Approve/ Rejected without Approved or Rejected Date</description>
    <errorConditionFormula>AND(OR(ISPICKVAL( Legal_Approval__c , &apos;Approved&apos;),
ISPICKVAL( Legal_Approval__c , &apos;Rejected&apos;)), OR(
ISNULL(  Approved_Rejected_Date__c ), Approved_Rejected_Date__c  &gt;  TODAY(), Approved_Rejected_Date__c  &lt;   Approval_Submission_Date__c ))</errorConditionFormula>
    <errorDisplayField>Approved_Rejected_Date__c</errorDisplayField>
    <errorMessage>The Approved/Rejected Date cannot be a future date or null, please verify.</errorMessage>
</ValidationRule>