force-app/main/default/objects/Contract__c/validationRules/RestrictApprovalDateRemoveOnAppOrRej.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictApprovalDateRemoveOnAppOrRej</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED( Approval_Submission_Date__c ), OR(ISPICKVAL( Legal_Approval__c , &apos;Approved&apos;) ,ISPICKVAL( Legal_Approval__c , &apos;Rejected&apos;)), ISBLANK(Approval_Submission_Date__c))</errorConditionFormula>
    <errorDisplayField>Approval_Submission_Date__c</errorDisplayField>
    <errorMessage>Please enter Approval Submission Date</errorMessage>
</ValidationRule>