force-app/main/default/objects/Contract__c/validationRules/Validate_Name_Contract.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Name_Contract</fullName>
    <active>true</active>
    <errorConditionFormula>Id == Name</errorConditionFormula>
    <errorMessage>Enter Valid Name</errorMessage>
</ValidationRule>