force-app/main/default/objects/Contract__c/listViews/All_Customer_signed_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Customer_signed_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Qantas_Annual_Expenditure__c</columns>
    <columns>Domestic_Annual_Share__c</columns>
    <columns>International_Annual_Share__c</columns>
    <columns>Includes_R_KMLVS__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Customer signed Contracts</label>
    <sharedTo>
        <role>QF</role>
        <role>QF_DOM_Sales_AP_Agency_Development</role>
        <role>QF_DOM_Sales_AP_Flight_Centre</role>
        <role>QF_DOM_Sales_AP_Helloworld</role>
        <role>QF_DOM_Sales_AP_Key_Partners</role>
        <role>QF_DOM_Sales_AP_Regional</role>
        <role>QF_DOM_Sales_B_G</role>
        <role>QF_DOM_Sales_B_G_Regional_Development</role>
        <role>QF_DOM_Sales_SME_QBR_Strategy</role>
        <role>QF_DOM_Sales_SME_QIS</role>
        <role>QF_DOM_Sales_SME_QIS_Sr_Manager</role>
        <role>QF_Support_B_G_Deal_Optimisation_Pricing</role>
        <role>QF_Support_Deal_Support</role>
    </sharedTo>
</ListView>