force-app/main/default/objects/Contract__c/listViews/Contracts_Expiring_in_3_Months.listView-meta.xml
<ListView>
    <fullName>Contracts_Expiring_in_3_Months</fullName>
    <columns>NAME</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Variation_In_Place__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_Loyalty__c</field>
        <operation>equals</operation>
        <value>Qantas Frequent Flyer</value>
    </filters>
    <label>QFF Contracts Expiring in 3 Months</label>
</ListView>